KSCM-2772: Fixed text wrap in <pre/>s on compare view for Firefox.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@76741 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -18,7 +18,8 @@ pre {
     color: #000000;
     background: inherit;
     margin-bottom: 0px;
-    word-break: break-word !important;
+    word-break: normal;
+    word-wrap: normal;
 }
 
 /* Labels in the header link group should be on the left. */
